--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de blog</h1>
-    <h2>*Post N° 1*</h2>
+    <h2>Post N° 1</h2>
+    <h2>Pots n° 2</h2>
 </body>
 </html>
