--- a/Vendas.html
+++ b/Vendas.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Página de Vendas</h1>
-    <p>Vendas : R$ 5000,00</p>
     <a href="index.html">Voltar para a home</a>
+    <h2>Relatório de vendas</h2>
+    <p>Venda 1 = R$ 3000,00</p>
+    <p>Venda 2 = R$ 2000,00</p>
 </body>
 </html>
