--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Página Inicial</h1>
     <a href="Vendas.html">Ir para página de vendas</a>
+    <a href="Blog.html">Ir para página de blog</a>
 </body>
 </html>
